cmake_minimum_required (VERSION 2.8.8)
project(mongo-cxx-pool)
set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
    message(FATAL_ERROR "Compiler ${CMAKE_CXX_COMPILER} has no C++11 support.")
endif()
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/;${CMAKE_MODULE_PATH}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(MONGO_CXX_POOL_MAJOR 0)
set(MONGO_CXX_POOL_MINOR 1)
set(MONGO_CXX_POOL_PATCH 0)
set(MONGO_CXX_POOL_BUILD 0)

set(SRC_PATH "${CMAKE_CURRENT_SOURCE_DIR}/src" )
set(TEST_PATH "${CMAKE_CURRENT_SOURCE_DIR}/tests" )
set(EXAMPLE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/examples" )

add_subdirectory(src)
#add_subdirectory(test)

